--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     ></script>
 
     <script defer src="script.js"></script>
-    <title>Mapfit // Map your workouts</title>
+    <title>Mapfit</title>
   </head>
   <body>
     <div class="sidebar">
